--- a/package.json
+++ b/package.json
@@ -4,32 +4,49 @@
   "description": "Backend and web client for Hop!",
   "author": "Robert Saunders and James Simpson",
   "scripts": {
-    "dev": "nodemon index.js --ignore client"
+    "start": "cross-env NODE_ENV=production node server",
+    "test": "cross-env eslint server/**/*.js client/**/*.js"
   },
   "dependencies": {
     "apollo-client": "^0.8.2",
     "axios": "^0.15.3",
-    "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
-    "babel-preset-env": "^1.1.8",
-    "babel-preset-react": "^6.22.0",
+    "babel-eslint": "^8.2.2",
     "bcrypt-nodejs": "0.0.3",
-    "body-parser": "^1.16.0",
-    "connect-mongo": "^1.3.2",
+    "body-parser": "^1.18.2",
+    "cross-env": "^5.1.3",
+    "dotenv": "^5.0.0",
     "express": "^4.14.0",
     "express-graphql": "^0.6.1",
     "express-session": "^1.15.0",
     "graphql": "^0.8.2",
     "graphql-tag": "^1.2.4",
-    "html-webpack-plugin": "^2.26.0",
     "lodash": "^4.17.4",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "pg": "^7.4.1",
+    "pg-hstore": "^2.3.2",
     "react": "^15.4.2",
     "react-apollo": "^0.10.0",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2",
-    "webpack": "^2.2.0",
+    "sequelize": "^4.33.3",
     "webpack-dev-middleware": "^1.9.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^6.4.1",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "compression-webpack-plugin": "^1.1.6",
+    "eslint": "^4.17.0",
+    "eslint-plugin-react": "^7.6.1",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "favicons-webpack-plugin": "0.0.7",
+    "html-webpack-plugin": "^2.30.1",
+    "rimraf": "^2.6.2",
+    "uglifyjs-webpack-plugin": "^1.1.8",
+    "webpack": "^2.7.0",
+    "webpack-dev-server": "^2.11.1"
   }
 }
