--- a/app.yaml
+++ b/app.yaml
@@ -7,3 +7,10 @@ automatic_scaling:
 
 env_variables:
   NODE_ENV: production
+  SQL_USER: YOUR_SQL_USER
+  SQL_PASSWORD: YOUR_SQL_PASSWORD
+  SQL_DATABASE: YOUR_SQL_DATABASE
+  INSTANCE_CONNECTION_NAME: YOUR_INSTANCE_CONNECTION_NAME
+
+beta_settings:
+  cloud_sql_instances: YOUR_INSTANCE_CONNECTION_NAME
