--- a/app-stage.yaml
+++ b/app-stage.yaml
@@ -7,10 +7,10 @@ automatic_scaling:
 
 env_variables:
   NODE_ENV: stage
-  SQL_USER: YOUR_SQL_USER
-  SQL_PASSWORD: YOUR_SQL_PASSWORD
-  SQL_DATABASE: YOUR_SQL_DATABASE
-  INSTANCE_CONNECTION_NAME: YOUR_INSTANCE_CONNECTION_NAME
+  SQL_USER: robertsaunders
+  SQL_PASSWORD: Numberfour$4
+  SQL_DATABASE: hop-stage-database
+  INSTANCE_CONNECTION_NAME: hop-stage-195003:us-east4:hop-databases
 
 beta_settings:
-  cloud_sql_instances: YOUR_INSTANCE_CONNECTION_NAME
+  cloud_sql_instances: hop-stage-195003:us-east4:hop-databases
