--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "favicons-webpack-plugin": "0.0.7",
     "html-webpack-plugin": "^2.30.1",
+    "nodemon": "^1.15.1",
     "rimraf": "^2.6.2",
     "uglifyjs-webpack-plugin": "^1.1.8",
     "webpack": "^2.7.0",
