--- a/app.yaml
+++ b/app.yaml
@@ -7,9 +7,9 @@ automatic_scaling:
 
 env_variables:
   NODE_ENV: production
-  SQL_USER: YOUR_SQL_USER
-  SQL_PASSWORD: YOUR_SQL_PASSWORD
-  SQL_DATABASE: YOUR_SQL_DATABASE
+  DB_PROD_USER: YOUR_SQL_USER
+  DB_PROD_PASSWORD: YOUR_SQL_PASSWORD
+  DB_PROD_NAME: YOUR_SQL_DATABASE
   INSTANCE_CONNECTION_NAME: YOUR_INSTANCE_CONNECTION_NAME
 
 beta_settings:
