--- a/package.json
+++ b/package.json
@@ -4,50 +4,57 @@
   "description": "Backend and web client for Hop!",
   "author": "Robert Saunders and James Simpson",
   "scripts": {
+    "server-dev": "cross-env NODE_ENV=development nodemon server",
+    "server-debug": "cross-env NODE_ENV=development nodemon --inspect server",
+    "server-test": "cross-env NODE_ENV=test node server",
     "start": "cross-env NODE_ENV=production node server",
-    "test": "cross-env eslint server/**/*.js client/**/*.js"
+    "client-dev": "cross-env webpack-dev-server",
+    "client-prod": "cross-env npm run client-clean && NODE_ENV=production webpack",
+    "client-clean": "cross-env rimraf ./client/bundle",
+    "test": "cross-env eslint --quiet server/**/*.js client/**/*.js && jest --colors --coverage || true"
   },
   "dependencies": {
-    "apollo-client": "^0.8.2",
-    "axios": "^0.15.3",
+    "apollo-client": "^2.2.6",
+    "axios": "^0.18.0",
     "babel-eslint": "^8.2.2",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
+    "compression": "^1.7.2",
     "cross-env": "^5.1.3",
-    "dotenv": "^5.0.0",
+    "dotenv": "^5.0.1",
     "express": "^4.14.0",
     "express-graphql": "^0.6.1",
     "express-session": "^1.15.0",
-    "graphql": "^0.8.2",
-    "graphql-tag": "^1.2.4",
+    "graphql": "^0.13.1",
+    "graphql-tag": "^2.8.0",
     "lodash": "^4.17.4",
-    "passport": "^0.3.2",
+    "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
-    "react": "^15.4.2",
-    "react-apollo": "^0.10.0",
-    "react-dom": "^15.4.2",
-    "react-router": "^3.0.2",
-    "sequelize": "^4.33.3",
-    "webpack-dev-middleware": "^1.9.0"
+    "react": "^16.2.0",
+    "react-apollo": "^2.0.4",
+    "react-dom": "^16.2.0",
+    "react-router": "^4.2.0",
+    "sequelize": "^4.35.2",
+    "winston": "^3.0.0-rc1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
-    "babel-loader": "^6.4.1",
+    "babel-jest": "^22.4.1",
+    "babel-loader": "^7.1.4",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "compression-webpack-plugin": "^1.1.6",
-    "eslint": "^4.17.0",
-    "eslint-plugin-react": "^7.6.1",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "favicons-webpack-plugin": "0.0.7",
-    "html-webpack-plugin": "^2.30.1",
-    "nodemon": "^1.15.1",
+    "eslint": "^4.18.2",
+    "eslint-plugin-react": "^7.7.0",
+    "html-webpack-plugin": "^3.0.6",
+    "jest": "^22.4.2",
+    "nodemon": "^1.17.1",
     "rimraf": "^2.6.2",
-    "uglifyjs-webpack-plugin": "^1.1.8",
-    "webpack": "^2.7.0",
-    "webpack-dev-server": "^2.11.1"
+    "webpack": "^4.1.1",
+    "webpack-cli": "^2.0.10",
+    "webpack-dev-server": "^3.1.0"
   }
 }
