--- a/app.yaml
+++ b/app.yaml
@@ -7,10 +7,6 @@ automatic_scaling:
 
 env_variables:
   NODE_ENV: production
-  DB_PROD_USER: YOUR_SQL_USER
-  DB_PROD_PASSWORD: YOUR_SQL_PASSWORD
-  DB_PROD_NAME: YOUR_SQL_DATABASE
-  INSTANCE_CONNECTION_NAME: YOUR_INSTANCE_CONNECTION_NAME
 
 beta_settings:
-  cloud_sql_instances: YOUR_INSTANCE_CONNECTION_NAME
+  cloud_sql_instances: hop-production-195003:us-east4:hop-databases
