--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,3 +52,6 @@ workflows:
       - dev-deploy:
           requires:
             - test
+          filters:
+            branches:
+              only: /^(dev|release/.+)$/
