--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "graphql-tag": "^2.8.0",
     "lodash": "^4.17.4",
     "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
     "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
