--- a/package.json
+++ b/package.json
@@ -14,29 +14,31 @@
   },
   "dependencies": {
     "apollo-client": "^2.2.6",
+    "apollo-server-express": "^1.3.2",
     "axios": "^0.18.0",
     "babel-eslint": "^8.2.2",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
-    "compression": "^1.7.2",
     "cross-env": "^5.1.3",
+    "dataloader": "^1.4.0",
     "dotenv": "^5.0.1",
     "express": "^4.14.0",
-    "express-graphql": "^0.6.1",
-    "express-session": "^1.15.0",
-    "graphql": "^0.13.1",
+    "graphql": "^0.12.0",
+    "graphql-subscriptions": "^0.5.8",
     "graphql-tag": "^2.8.0",
+    "graphql-tools": "^2.23.0",
     "lodash": "^4.17.4",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
-    "passport-local": "^1.0.0",
+    "passport-http-bearer": "^1.0.1",
     "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
-    "sequelize": "^4.35.2",
+    "sequelize": "^4.37.0",
+    "subscriptions-transport-ws": "^0.9.6",
     "winston": "^3.0.0-rc1"
   },
   "devDependencies": {
@@ -46,7 +48,6 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
     "eslint": "^4.18.2",
     "eslint-plugin-react": "^7.7.0",
     "html-webpack-plugin": "^3.0.6",
@@ -55,6 +56,6 @@
     "rimraf": "^2.6.2",
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.10",
-    "webpack-dev-server": "^3.1.0"
+    "webpack-dev-server": "^3.1.1"
   }
 }
