--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "dotenv": "^5.0.1",
     "express": "^4.14.0",
     "graphql": "^0.12.0",
-    "graphql-subscriptions": "^0.5.8",
+    "graphql-redis-subscriptions": "^1.4.0",
     "graphql-tag": "^2.8.0",
     "graphql-tools": "^2.23.0",
+    "ioredis": "^3.2.2",
     "lodash": "^4.17.4",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
