adding some auth work on both middleware and gql mutations, adding deps and scripts for emails

--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "client-dev": "cross-env webpack-dev-server",
     "client-prod": "cross-env npm run client-clean && NODE_ENV=production webpack",
     "client-clean": "cross-env rimraf ./client/bundle",
+    "email-dev": "cross-env npm run email-clean && mjml ./email/templates/*.mjml -o ./email/dist/",
+    "email-prod": "cross-env npm run email-clean && mjml --min ./email/templates/*.mjml -o ./email/dist/",
+    "email-clean": "cross-env rimraf ./email/dist && mkdir ./email/dist",
     "test": "cross-env eslint --quiet server/**/*.js client/**/*.js && jest --colors || true"
   },
   "dependencies": {
+    "@sendgrid/mail": "^6.2.1",
     "apollo-client": "^2.2.6",
     "apollo-server-express": "^1.3.2",
     "axios": "^0.18.0",
     "babel-eslint": "^8.2.2",
+    "bcrypt": "^1.0.3",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
     "cross-env": "^5.1.3",
@@ -28,7 +33,10 @@
     "graphql-tag": "^2.8.0",
     "graphql-tools": "^2.23.0",
     "ioredis": "^3.2.2",
+    "jsonwebtoken": "^8.2.0",
     "lodash": "^4.17.4",
+    "mjml": "^4.0.2",
+    "mustache": "^2.3.0",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-http-bearer": "^1.0.1",
