--- a/package.json
+++ b/package.json
@@ -18,7 +18,13 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^6.2.1",
-    "apollo-client": "^2.2.8",
+    "apollo-cache-inmemory": "^1.2.0",
+    "apollo-client": "^2.3.0",
+    "apollo-link": "^1.2.2",
+    "apollo-link-error": "^1.0.9",
+    "apollo-link-http": "^1.5.4",
+    "apollo-link-state": "^0.4.1",
+    "apollo-link-ws": "^1.0.8",
     "apollo-server-express": "^1.3.6",
     "axios": "^0.18.0",
     "babel-eslint": "^8.2.3",
@@ -26,38 +32,35 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
     "cross-env": "^5.1.3",
-    "dataloader": "^1.4.0",
     "dotenv": "^5.0.1",
     "express": "^4.14.0",
     "graphql": "^0.13.2",
     "graphql-redis-subscriptions": "^1.5.0",
-    "graphql-tag": "^2.9.1",
+    "graphql-tag": "^2.9.2",
     "graphql-tools": "^3.0.0",
     "ioredis": "^3.2.2",
     "jsonwebtoken": "^8.2.1",
     "mjml": "^4.0.5",
     "mustache": "^2.3.0",
-    "passport": "^0.4.0",
-    "passport-facebook": "^2.1.1",
-    "passport-http-bearer": "^1.0.1",
     "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
     "react": "^16.3.2",
     "react-apollo": "^2.1.3",
     "react-dom": "^16.3.2",
-    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "sequelize": "^4.37.6",
     "subscriptions-transport-ws": "^0.9.8",
     "winston": "^3.0.0-rc5"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
+    "@babel/core": "^7.0.0-beta.46",
+    "@babel/preset-env": "^7.0.0-beta.46",
+    "@babel/preset-react": "^7.0.0-beta.46",
     "babel-jest": "^22.4.3",
     "babel-loader": "^7.1.4",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
     "eslint": "^4.19.1",
+    "eslint-plugin-graphql": "^2.1.1",
     "eslint-plugin-react": "^7.7.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^22.4.3",
@@ -65,7 +68,7 @@
     "prettier-eslint-cli": "^4.7.1",
     "rimraf": "^2.6.2",
     "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.15",
-    "webpack-dev-server": "^3.1.3"
+    "webpack-cli": "^2.1.2",
+    "webpack-dev-server": "^3.1.4"
   }
 }
