--- a/package.json
+++ b/package.json
@@ -4,71 +4,25 @@
   "description": "Backend and web client for Hop!",
   "author": "Robert Saunders and James Simpson",
   "scripts": {
-    "server-dev": "cross-env NODE_ENV=development nodemon server",
-    "server-debug": "cross-env NODE_ENV=development nodemon --inspect server",
-    "start": "cross-env NODE_ENV=production node server",
-    "client-dev": "cross-env webpack-dev-server",
-    "client-prod": "cross-env npm run client-clean && NODE_ENV=production webpack",
-    "client-clean": "cross-env rimraf ./client/bundle",
-    "email-dev": "cross-env npm run email-clean && mjml ./email/templates/*.mjml -o ./email/dist/",
-    "email-prod": "cross-env npm run email-clean && mjml --min ./email/templates/*.mjml -o ./email/dist/",
-    "email-clean": "cross-env rimraf ./email/dist && mkdir ./email/dist",
-    "test": "cross-env eslint --quiet server/**/*.js client/**/*.js && jest --colors || true",
-    "beautify": "prettier-eslint server/**/*.js client/**/*.js --write"
+    "bootstrap": "npm install --unsafe-perm || ((if [ -f npm-debug.log ]; then cat npm-debug.log; fi) && false) && lerna bootstrap --hoist",
+    "build": "npm run test && lerna run build --stream",
+    "dev": "lerna run build --scope hop-email && lerna run dev --scope hop-server --scope hop-client --stream --parallel",
+    "start": "lerna run start --scope hop-server --stream",
+    "test": "cross-env eslint packages/server/**/*.js packages/client/**/*.js",
+    "beautify": "prettier-eslint \"packages/**/*.js\" --write"
   },
-  "dependencies": {
-    "@sendgrid/mail": "^6.2.1",
-    "apollo-cache-inmemory": "^1.2.0",
-    "apollo-client": "^2.3.0",
-    "apollo-link": "^1.2.2",
-    "apollo-link-error": "^1.0.9",
-    "apollo-link-http": "^1.5.4",
-    "apollo-link-state": "^0.4.1",
-    "apollo-link-ws": "^1.0.8",
-    "apollo-server-express": "^1.3.6",
-    "axios": "^0.18.0",
-    "babel-eslint": "^8.2.3",
-    "bcrypt": "^2.0.1",
-    "bcrypt-nodejs": "0.0.3",
-    "body-parser": "^1.18.2",
-    "cross-env": "^5.1.3",
-    "dotenv": "^5.0.1",
-    "express": "^4.14.0",
-    "graphql": "^0.13.2",
-    "graphql-redis-subscriptions": "^1.5.0",
-    "graphql-tag": "^2.9.2",
-    "graphql-tools": "^3.0.0",
-    "ioredis": "^3.2.2",
-    "jsonwebtoken": "^8.2.1",
-    "mjml": "^4.0.5",
-    "mustache": "^2.3.0",
-    "pg": "^7.4.1",
-    "pg-hstore": "^2.3.2",
-    "react": "^16.3.2",
-    "react-apollo": "^2.1.3",
-    "react-dom": "^16.3.2",
-    "react-router-dom": "^4.2.2",
-    "sequelize": "^4.37.6",
-    "subscriptions-transport-ws": "^0.9.8",
-    "winston": "^3.0.0-rc5"
+  "engines": {
+    "node": "8.9.x",
+    "npm": "5.x"
   },
+  "dependencies": {},
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.46",
-    "@babel/preset-env": "^7.0.0-beta.46",
-    "@babel/preset-react": "^7.0.0-beta.46",
-    "babel-jest": "^22.4.3",
-    "babel-loader": "^7.1.4",
-    "babel-polyfill": "^6.26.0",
+    "babel-eslint": "^8.2.3",
     "eslint": "^4.19.1",
     "eslint-plugin-graphql": "^2.1.1",
     "eslint-plugin-react": "^7.7.0",
-    "html-webpack-plugin": "^3.2.0",
     "jest": "^22.4.3",
-    "nodemon": "^1.17.3",
-    "prettier-eslint-cli": "^4.7.1",
-    "rimraf": "^2.6.2",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^2.1.2",
-    "webpack-dev-server": "^3.1.4"
+    "lerna": "^2.11.0",
+    "prettier-eslint-cli": "^4.7.1"
   }
 }
