--- a/package.json
+++ b/package.json
@@ -6,22 +6,16 @@
   "scripts": {
     "bootstrap": "npm install --unsafe-perm || ((if [ -f npm-debug.log ]; then cat npm-debug.log; fi) && false) && lerna bootstrap --hoist",
     "build": "npm run test && lerna run build --stream",
-    "dev": "lerna run build --scope hop-email && lerna run dev --scope hop-server --scope hop-client --stream --parallel",
+    "dev": "lerna run dev --scope hop-server --scope hop-client --stream --parallel",
     "start": "lerna run start --scope hop-server --stream",
-    "test": "cross-env eslint packages/server/**/*.js packages/client/**/*.js",
+    "test": "eslint packages/**/*.js",
     "beautify": "prettier-eslint \"packages/**/*.js\" --write"
-  },
-  "engines": {
-    "node": "8.9.x",
-    "npm": "5.x"
   },
   "dependencies": {},
   "devDependencies": {
     "babel-eslint": "^8.2.3",
     "eslint": "^4.19.1",
-    "eslint-plugin-graphql": "^2.1.1",
     "eslint-plugin-react": "^7.7.0",
-    "jest": "^22.4.3",
     "lerna": "^2.11.0",
     "prettier-eslint-cli": "^4.7.1"
   }
