--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,8 +4,8 @@
   "description": "Backend for Hop!",
   "author": "Robert Saunders and James Simpson",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon index.js",
-    "start": "cross-env NODE_ENV=production node index.js"
+    "dev": "NODE_ENV=development nodemon index.js",
+    "start": "NODE_ENV=production node index.js"
   },
   "dependencies": {
     "apollo-server-express": "^1.3.6",
@@ -24,7 +24,6 @@
     "winston": "^3.0.0-rc5"
   },
   "devDependencies": {
-    "cross-env": "^5.1.4",
     "nodemon": "^1.17.3"
   }
 }
