--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -24,7 +24,8 @@
     "react": "^16.3.2",
     "react-apollo": "^2.1.3",
     "react-dom": "^16.3.2",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "subscriptions-transport-ws": "^0.9.8"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
