--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "apollo-server-express": "^1.3.6",
     "body-parser": "^1.18.2",
+    "connect-history-api-fallback": "^1.5.0",
+    "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "express": "^4.14.0",
     "graphql": "^0.13.2",
