--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -18,12 +18,14 @@
     "apollo-link-ws": "^1.0.8",
     "axios": "^0.18.0",
     "dotenv": "^5.0.1",
+    "final-form": "^4.6.1",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "graphql-tools": "^3.0.0",
     "react": "^16.3.2",
     "react-apollo": "^2.1.3",
     "react-dom": "^16.3.2",
+    "react-final-form": "^3.4.0",
     "react-router-dom": "^4.2.2",
     "subscriptions-transport-ws": "^0.9.8"
   },
