--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "apollo-server-express": "^1.3.6",
+    "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
     "connect-history-api-fallback": "^1.5.0",
     "cors": "^2.8.4",
@@ -23,6 +24,7 @@
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.37.6",
     "subscriptions-transport-ws": "^0.9.8",
+    "uuid": "^3.2.1",
     "winston": "^3.0.0-rc5"
   },
   "devDependencies": {
