--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,7 +4,7 @@
   "description": "Backend for Hop!",
   "author": "Robert Saunders and James Simpson",
   "scripts": {
-    "dev": "NODE_ENV=development nodemon index.js",
+    "dev": "NODE_ENV=development nodemon --inspect index.js",
 		"start": "NODE_ENV=production node index.js",
 		"dump-schema": "node ./gql/utils/dumpSchema.js"
   },
