--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,10 +5,12 @@
   "author": "Robert Saunders and James Simpson",
   "scripts": {
     "dev": "NODE_ENV=development nodemon --inspect index.js",
-		"start": "NODE_ENV=production node index.js",
-		"dump-schema": "node ./gql/utils/dumpSchema.js"
+    "start": "NODE_ENV=production node index.js",
+    "dump-schema": "node ./gql/utils/dumpSchema.js"
   },
   "dependencies": {
+    "apollo-errors": "^1.9.0",
+    "apollo-resolvers": "^1.3.0",
     "apollo-server-express": "^1.3.6",
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
